Added transaction IDs saved to json file with name. Also added a who command to look up transaction IDs and see it's assosiated with.

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 
 {
-    "token": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
+    "token": "MTE0OTczNzUwODIxNzgzNTU1MA.GXWJp7.6OtFabl5GLZBT0ZsGa1P7HIzIoGeWD7nk4Y-3k",
     "role": "donator",
     "Price": 10,
     "cashapp": "test",
