--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 
 {
-    "token": "MTE0OTczNzUwODIxNzgzNTU1MA.GXWJp7.6OtFabl5GLZBT0ZsGa1P7HIzIoGeWD7nk4Y-3k",
+    "token": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
     "role": "donator",
     "Price": 10,
     "cashapp": "test",
